# event-generator

./: CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Justfile  LICENSE  README.md  build.rs  docker-compose.yaml
.github/workflows/: docker-debug.yml  release.yml
config/: example.toml  script_example.toml
dashboard/: Dockerfile  biome.json  components.json  entrypoint.sh  package.json  vite.config.ts
dashboard/app/: app.css  root.tsx  routes.ts
dashboard/app/components/: config-editor.tsx  editor-skeleton.tsx  key-value-list.tsx  lua-editor.tsx  lua-script-field.tsx  rhai-editor.tsx  rhai-script-field.tsx  stat-card.tsx  stream-panel.tsx  streams-table.tsx
dashboard/app/hooks/: use-stats-socket.ts  use-stream-socket.ts
dashboard/app/routes/: config.tsx  dashboard.tsx  pinger.tsx  studio.tsx
infra/docker-compose/: conf.toml  entrypoint.override.sh  filebeat.docker.yml
infra/k8s/: configmap.yaml  deployment.yaml  service.yaml
scripts/: java_trace.lua  java_trace.rhai  release.sh
src/: error.rs  lib.rs  main.rs
src/config/: model.rs  validate.rs
src/data/: fake.rs
src/engine/: manager.rs  mod.rs  rate.rs  stream.rs  wave.rs
src/format/: cef.rs  clf.rs  java_log4j.rs  json_structured.rs  leef.rs  mod.rs  syslog_rfc3164.rs  syslog_rfc5424.rs  template.rs
src/output/: file.rs  http.rs  mod.rs  stdout.rs  tcp.rs  udp.rs
src/script/: functions.rs  mod.rs
src/stats/: reporter.rs
src/web/: dashboard.rs  mod.rs
src/web/assets/: dashboard.css  dashboard.html  dashboard.js  debug_presets.txt
templates/: custom_json.tera  firewall.tera
(+1 files in other folders)
