[package]
name = "event-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fake = { version = "3", features = ["derive", "chrono"] }
rand = "0.9"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tera = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
