[package]
name = "event-generator"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fake = { version = "3", features = ["derive", "chrono"] }
rand = "0.9"
rhai = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tera = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
rust-embed = "8"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
